modified index.html and added a paragraph or 2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Hello Wolrd!</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere reiciendis quos vero error neque natus porro
+        iusto voluptatum sapiente. Quo voluptatem rem, alias ex accusantium ullam. Vel enim alias officiis?
+    </p>
 </body>
 
 </html>
